Fix whitespace

--- a/src/components/Marketplace/Sidebar/Sidebar.css
+++ b/src/components/Marketplace/Sidebar/Sidebar.css
@@ -42,36 +42,38 @@
 }
 
 .sidebar-item.active{
-  height: 100%;
-  width: 100%;
-  background-color: var(--sidebar-active);
+    height: 100%;
+    width: 100%;
+    background-color: var(--sidebar-active);
 }
 
 .sidebar-listheader{
-  margin: 0;
-  width: 100%;
-  text-align: inherit;
-  padding: 0.5rem 0;
-  padding-left: 1rem;
+    margin: 0;
+    width: 100%;
+    text-align: inherit;
+    padding: 0.5rem 0;
+    padding-left: 1rem;
 }
 
 .active .sidebar-listheader{
-  width: 12rem;
-  display: block;
-  color: white;
-  background-color: var(--blue-gradient-start);
+    width: 12rem;
+    display: block;
+    color: white;
+    background-color: var(--blue-gradient-start);
 
-  border-top-right-radius: 2rem;
-  border-bottom-right-radius: 2rem;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
 }
 
 .list-items-container{
-  margin-left: 1rem;
-  height: 100%;
-  display: none;
+    margin-left: 1rem;
+    display: none;
+    overflow: hidden;
 }
 
 .active .list-items-container{
-  display: flex;
-  flex-direction: column;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
 }
